--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
   <color name="red">#D81B60</color>
   <color name="white">#FFFFFF</color>
   <color name="lightBlue">#DEF0FF</color>
+  <color name="black">#000000</color>
 </resources>
