--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
   <color name="white">#FFFFFF</color>
   <color name="lightBlue">#DEF0FF</color>
   <color name="black">#000000</color>
+  <color name="gray">#636363</color>
 </resources>
