--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -38,6 +38,28 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/txtUserId"
+                    android:layout_width="20sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="User ID:" />
+
+                <EditText
+                    android:id="@+id/editTxtUserId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25sp"
+                android:orientation="horizontal">
+
+                <TextView
                     android:id="@+id/txtTitle"
                     android:layout_width="20sp"
                     android:layout_height="wrap_content"
@@ -110,7 +132,7 @@
                     android:layout_width="20sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/noCopies" />
+                    android:text="Email" />
 
                 <EditText
                     android:id="@+id/editTxtNoCopies"
