--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,6 +32,36 @@
                     android:padding="15sp">
 
                     <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Admin"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewAdmin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
                         android:id="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -50,6 +80,14 @@
                         android:textSize="45sp"
                         android:textStyle="bold" />
                 </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -80,13 +118,6 @@
                         android:textSize="45sp"
                         android:textStyle="bold" />
                 </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -119,35 +150,7 @@
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10sp"
-                    android:layout_weight="1"
-                    android:background="@color/lightBlue"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="15sp">
 
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10sp"
-                        android:layout_weight="1"
-                        android:text="# Genre"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/txtViewGenre"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="00"
-                        android:textColor="@color/black"
-                        android:textSize="45sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
             </LinearLayout>
 
@@ -203,7 +206,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10sp"
                         android:layout_weight="1"
-                        android:text="# Late Return"
+                        android:text="# Over Due"
                         android:textSize="16sp" />
 
                     <TextView
