login, signup ui changes

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -50,7 +50,7 @@
 
                 <TextView
                     android:id="@+id/txtTitle"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Name:" />
@@ -72,7 +72,7 @@
 
                 <TextView
                     android:id="@+id/txtAddress"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Address:" />
@@ -94,7 +94,7 @@
 
                 <TextView
                     android:id="@+id/txtTelNo"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Tel No:" />
@@ -118,7 +118,7 @@
 
                 <TextView
                     android:id="@+id/txtEmail"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Email:" />
@@ -142,10 +142,10 @@
 
                 <TextView
                     android:id="@+id/txtuname"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="User Name:" />
+                    android:text="Username:" />
 
                 <EditText
                     android:id="@+id/editTxtUserName"
@@ -166,10 +166,10 @@
 
                 <TextView
                     android:id="@+id/txtpass"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Password" />
+                    android:text="Password:" />
 
                 <EditText
                     android:id="@+id/editTxtPassword"
@@ -197,7 +197,7 @@
                     android:text="Sign Up" />
 
                 <Button
-                    android:id="@+id/btnCancel"
+                    android:id="@+id/btnSignupCancel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15sp"
