--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,10 +51,10 @@
 
                 <TextView
                     android:id="@+id/txtuname"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="User Name:" />
+                    android:text="Username:" />
 
                 <EditText
                     android:id="@+id/editTxtUserName"
@@ -75,10 +75,10 @@
 
                 <TextView
                     android:id="@+id/txtpass"
-                    android:layout_width="20sp"
+                    android:layout_width="50sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Password" />
+                    android:text="Password:" />
 
                 <EditText
                     android:id="@+id/editTxtPassword"
@@ -90,16 +90,33 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btnAddAdmin"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_gravity="center"
-                android:layout_marginTop="20sp"
-                android:onClick="LoginCheck"
-                android:text="Login" />
+                android:gravity="center"
+                android:layout_marginTop="25sp"
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/btnAddAdmin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="LoginCheck"
+                    android:text="Login" />
+
+                <Button
+                    android:id="@+id/btnLoginCancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15sp"
+                    android:layout_weight="1"
+                    android:text="@string/cancel"
+                    android:theme="@style/Button" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
