--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,77 +12,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10sp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10sp"
-                    android:layout_weight="1"
-                    android:background="@color/lightBlue"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="15sp">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10sp"
-                        android:layout_weight="1"
-                        android:text="# Admin"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/txtViewAdmin"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="00"
-                        android:textColor="@color/black"
-                        android:textSize="45sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10sp"
-                    android:layout_weight="1"
-                    android:background="@color/lightBlue"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="15sp">
-
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10sp"
-                        android:layout_weight="1"
-                        android:text="# Users"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/txtViewUser"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="00"
-                        android:textColor="@color/black"
-                        android:textSize="45sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -161,7 +94,7 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="10sp"
                     android:layout_weight="1"
                     android:background="@color/lightBlue"
@@ -276,7 +209,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10sp"
                         android:layout_weight="1"
-                        android:text="# Over Due"
+                        android:text="# Late Return"
                         android:textSize="16sp" />
 
                     <TextView
@@ -291,6 +224,79 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Admin"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewAdmin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Users"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewUser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="55sp"
+                android:layout_weight="1" />
 
         </LinearLayout>
     </ScrollView>
