--- a/app/src/main/res/layout/activity_add_lending.xml
+++ b/app/src/main/res/layout/activity_add_lending.xml
@@ -60,8 +60,10 @@
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:layout_marginLeft="20sp"
+                    android:scaleType="fitCenter"
+                    android:padding="2sp"
                     android:background="@color/darkBlue"
-                    app:srcCompat="@drawable/qr_code" />
+                    app:srcCompat="@drawable/qr_icon" />
 
             </LinearLayout>
 
@@ -92,8 +94,10 @@
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:layout_marginLeft="20sp"
+                    android:scaleType="fitCenter"
+                    android:padding="2sp"
                     android:background="@color/darkBlue"
-                    app:srcCompat="@drawable/qr_code" />
+                    app:srcCompat="@drawable/qr_icon" />
 
             </LinearLayout>
 
@@ -124,8 +128,10 @@
                     android:layout_width="35sp"
                     android:layout_height="35sp"
                     android:layout_marginLeft="20sp"
+                    android:scaleType="fitCenter"
+                    android:padding="2sp"
                     android:background="@color/darkBlue"
-                    app:srcCompat="@drawable/qr_code" />
+                    app:srcCompat="@drawable/qr_icon" />
 
             </LinearLayout>
 
